--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "DogecoinManager/thirdparty/CDZQRScanningViewController"]
 	path = DogecoinManager/thirdparty/CDZQRScanningViewController
 	url = https://github.com/cdzombak/CDZQRScanningViewController.git
+[submodule "DogecoinManager/thirdparty/HTProgressHUD"]
+	path = DogecoinManager/thirdparty/HTProgressHUD
+	url = https://github.com/Hardtack/HTProgressHUD.git
