* Wallet address copy * Trim mining pool whitespace

--- a/DogecoinManager/DogecoinManager-Info.plist
+++ b/DogecoinManager/DogecoinManager-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>A Shibe's B.F.</string>
+	<string>Shibe Helper</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
